--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "firebase": "^4.7.0",
     "firebaseui": "^2.5.1",
+    "gh-pages": "^1.1.0",
     "input-moment": "^0.4.0",
     "material-ui": "^1.0.0-beta.22",
     "material-ui-icons": "^1.0.0-beta.17",
@@ -29,9 +30,12 @@
     "remarkable": "^1.7.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "homepage": "https://SeanLeRoyMeharry.github.io/Mello"
 }
